# fix_client_server

./: .gitignore  CMakeLists.txt  README.md
client/: Application.cpp  Application.h  CMakeLists.txt  client.cpp  client_config.cfg
server/: Application.cpp  Application.h  CMakeLists.txt  logger.h  server.cpp  server_config.cfg
spec/: FIX44.xml
